test/src/e2e_vm_tests/test_programs/should_fail/nonconst_storage_init/src/main.sw
contract;

use core::*;

storage {
    x: u64 = 18446744073709551615 + 1,
    y: u64 = 5 + 5,
}

abi Test {
    #[storage(read, write)]
    fn foo();
}

impl Test for Contract {
     #[storage(read, write)]
     fn foo() {
        storage.x += 1;
        storage.y += 1;
    }
}
